--- a/API_premierductsqld/appsettings.Development.json
+++ b/API_premierductsqld/appsettings.Development.json
@@ -1,11 +1,24 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "URLForQLDDataAPI": "https://localhost:5004",
-  "URLForAppUserAPI": "https://localhost:5003"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+
+		"ConnectionForDatabase": "server=127.0.0.1;user=root;password=123456;port=3306;database=premierductsqld;"
+
+	},
+	"emailForReport": [
+		"testalldev123@gmail.com"
+	],
+	"URLForQLDDataAPI": "https://localhost:5004",
+	"URLForAppUserAPI": "https://localhost:5003",
+	"AppSettings": {
+		"Secret": "ae2b1fca515949e5d54fb22b8ed95575"
+	},
+	"Urls": "https://localhost:5001"
 }
