--- a/DTO_PremierDucts/DTO_PremierDucts.csproj
+++ b/DTO_PremierDucts/DTO_PremierDucts.csproj
@@ -8,14 +8,22 @@
     <None Remove="JWT Authentication\" />
     <None Remove="DBClient\" />
     <None Remove="Microsoft.AspNet.WebApi.Client" />
-    <None Remove="Response\" />
     <None Remove="Utils\" />
+    <None Remove="Serilog" />
+    <None Remove="Spire.XLS" />
+    <None Remove="ClosedXML" />
+    <None Remove="Microsoft.Extensions.Logging.Abstractions" />
+    <None Remove="Objects\" />
+    <None Remove="Entities\" />
+    <None Remove="EntityResponse\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="JWT_Authentication\" />
     <Folder Include="DBClient\" />
-    <Folder Include="Response\" />
     <Folder Include="Utils\" />
+    <Folder Include="Objects\" />
+    <Folder Include="Entities\" />
+    <Folder Include="EntityResponse\" />
   </ItemGroup>
     <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.4">
@@ -32,5 +40,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
+    <PackageReference Include="ClosedXML" Version="0.96.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
   </ItemGroup>
 </Project>
